# rusty-potree-converter

./: .gitignore  Cargo.toml  README.md
potree-converter/: Cargo.toml  LICENSE_MIT  README.md
potree-converter/examples/potree-viewer/: PotreeLoader.js  README.md  index.html  index.js  package-lock.json  package.json
potree-converter/src/: lib.rs
resources/: metadata.json  points_integer_intensity.csv  points_intensity.csv
src/: csv_reader.rs  hierarchy.rs  lib.rs  main.rs  model.rs  pcd_reader.rs  potree.rs  writer.rs
src/chunking/: model.rs
src/indexing/: hierarchy.rs  indexing.rs  mod.rs  model.rs
src/model/: attributes.rs  bounds.rs  hierarchy.rs  metadata.rs  mod.rs  node.rs  options.rs  vector3.rs
src/reader/: mod.rs  reader.rs
src/sampling/: mod.rs
src/writer/: writer.rs
