[package]
name = "rusty-potree-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcd-rs = "0.9.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1"
rand = "0.8.4"
ord_subset = "3.1.1"
csv = "1.1"


